test/src/e2e_vm_tests/test_programs/should_pass/language/slice/slice_script/src/main.sw
script;

fn main(a: raw_slice) -> raw_slice {
    a
}
