test/src/e2e_vm_tests/test_programs/should_fail/raw_slice_ret/src/main.sw
script;

struct HasRawSlice {
    slice: raw_slice,
}

fn main() -> HasRawSlice {
    let val = HasRawSlice {
        slice: asm() { zero: raw_slice }
    };
    val
}
